# dddpy_example

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
dddpy/domain/plan/: __init__.py  plan.py  plan_exception.py  plan_repository.py
dddpy/domain/price/: __init__.py  price.py  price_repository.py  value.py
dddpy/infrastructure/: seed.py
dddpy/infrastructure/sqlite/: database.py
dddpy/infrastructure/sqlite/plan/: __init__.py  plan_dto.py  plan_repository.py
dddpy/infrastructure/sqlite/price/: __init__.py  price_dto.py  price_repository.py  price_service.py
dddpy/presentation/schema/plan/: plan_error_message.py
dddpy/usecase/price/: __init__.py  price_command_model.py  price_command_usecase.py  price_service.py
tests/domain/: conftest.py
tests/domain/plan/: test_plan.py
tests/domain/price/: test_price.py  test_value.py
tests/infrastructure/sqlite/price/: test_price_dto.py
tests/usecase/price/: test_price_command_usecase.py
