[tool.poetry]
name = "dddpy"
version = "0.9.0"
description = "DDD"
authors=["ivan <ivcmartello@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.3.23"
pydantic = "^1.7.3"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.800"
pytest = "^6.2.2"
isort = "^5.7.0"
pylint = "^2.6.2"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
